# Gamebryo-Engine-Unit-Converter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SUCK-SkyrimUnitConversionKit.aps  SUCK-SkyrimUnitConversionKit.rc  conv.aps  conv.rc  fileIO.h  functions.cpp  functions.h  globals.h  inline.cpp  main.cpp  make_release.sh  resource.h  resource1.h  suck.vcxproj  suck.vcxproj.filters  user_input.h
.github/ISSUE_TEMPLATE/: bug-report-template.md
.github/workflows/: GenerateRelease.yml  Linux.yml  Windows.yml  codeql-analysis.yml  macOS.yml
Gamebryo Converter/: FileIO.h  Gamebryo Converter.vcxproj  Gamebryo Converter.vcxproj.filters  INI.h  INI_Defaults.h  INI_Setting.h  Value.h  argument_processor.hpp  config.xml  const_defaults.h  conv.aps  conv.rc  factor.h  file.h  fileIO.h  info.h  ini.h  interpret.hpp  main.cpp  main.hpp  sys.h  xml.h
Gamebryo Converter/INI/: INI.h  INI_Defaults.h  INI_Setting.h
Gamebryo Converter/Release/: conv.iobj  conv.ipdb
Gamebryo Converter/radj307/: sys.h
Gamebryo-Conv/: ColorAPISelector.hpp  Gamebryo-Conv.aps  Gamebryo-Conv.rc  Gamebryo-Conv.vcxproj  Gamebryo-Conv.vcxproj.filters  Help.hpp  Value.h  build-cfg.hpp  converter.hpp  file-conv.h  interpret.hpp  main.cpp  resource.h
Gamebryo-Conv-WSL-Linux/: Gamebryo-Conv-WSL-Linux.vcxproj  Gamebryo-Conv-WSL-Linux.vcxproj.filters  Value.h  file-conv.h  main.cpp
Gamebryo-Conv/.vshistory/Value.h/: 2021-03-15_17_35_40_838.h  2021-03-16_11_27_33_677.h  2021-03-16_11_27_43_004.h  2021-03-16_11_27_47_759.h  2021-03-16_11_27_56_607.h  2021-03-16_11_28_02_558.h  2021-03-16_11_28_04_894.h  2021-03-16_11_28_23_314.h  2021-03-16_11_28_25_844.h  2021-03-16_11_28_30_666.h  2021-03-16_11_28_32_958.h  2021-03-16_11_28_41_501.h  2021-03-16_11_28_47_351.h  2021-03-16_11_28_49_535.h  2021-03-16_11_28_57_944.h  2021-03-16_11_29_04_192.h  2021-03-16_11_29_12_590.h  2021-03-16_11_29_19_962.h  2021-03-16_11_29_27_244.h  2021-03-16_11_29_36_654.h  2021-03-16_11_30_44_594.h  2021-03-16_11_30_49_331.h  2021-03-16_11_31_11_845.h  2021-03-16_11_31_14_909.h  2021-03-16_11_31_21_675.h  2021-03-16_11_31_51_384.h  2021-03-16_11_32_07_696.h  2021-03-16_11_32_25_740.h  2021-03-16_11_32_48_302.h  2021-03-16_11_39_17_406.h  2021-03-16_11_40_45_154.h  2021-03-16_11_41_51_725.h  2021-03-16_12_28_16_892.h  2021-03-16_12_28_45_702.h  2021-03-16_12_28_49_444.h  2021-03-16_12_29_25_741.h
Gamebryo-Conv/.vshistory/build-cfg.hpp/: 2021-03-15_17_37_23_780.hpp  2021-03-15_17_37_40_175.hpp  2021-03-15_17_38_02_070.hpp  2021-03-15_17_38_05_849.hpp  2021-03-15_17_38_12_142.hpp  2021-03-15_17_38_27_603.hpp  2021-03-15_17_38_29_040.hpp  2021-03-15_17_38_40_494.hpp  2021-03-15_17_38_57_231.hpp  2021-03-15_17_39_23_200.hpp  2021-03-15_17_39_30_547.hpp  2021-03-15_17_39_37_112.hpp  2021-03-15_17_40_10_228.hpp  2021-03-15_17_40_28_828.hpp  2021-03-15_17_40_33_985.hpp  2021-03-15_17_40_53_199.hpp  2021-03-15_17_41_46_447.hpp  2021-03-15_17_42_18_046.hpp  2021-03-15_17_42_59_208.hpp  2021-03-15_17_43_05_431.hpp  2021-03-15_17_45_24_069.hpp  2021-03-15_17_45_39_846.hpp  2021-03-15_17_45_48_201.hpp  2021-03-15_17_46_33_648.hpp  2021-03-15_17_46_45_769.hpp  2021-03-15_17_47_20_045.hpp  2021-03-15_17_47_25_419.hpp  2021-03-15_17_48_01_948.hpp  2021-03-15_17_48_48_032.hpp  2021-03-15_17_50_51_347.hpp  2021-03-15_17_50_53_779.hpp  2021-03-15_17_51_45_727.hpp  2021-03-15_17_52_07_068.hpp  2021-03-15_17_53_34_453.hpp  2021-03-15_17_54_23_565.hpp  2021-03-15_17_54_34_520.hpp  2021-03-15_17_55_59_669.hpp  2021-03-15_17_56_15_302.hpp  2021-03-15_17_56_20_148.hpp  2021-03-15_17_56_31_166.hpp  (+93 more)
Gamebryo-Conv/.vshistory/file-conv.h/: 2021-03-15_17_35_29_573.h  2021-03-16_11_41_58_660.h  2021-03-16_11_42_46_881.h  2021-03-16_11_43_04_893.h  2021-03-16_11_43_35_219.h  2021-03-16_11_51_08_358.h  2021-03-16_11_51_12_079.h  2021-03-16_11_52_04_709.h  2021-03-16_11_52_18_250.h  2021-03-16_11_52_27_352.h  2021-03-16_11_52_53_001.h  2021-03-16_11_53_28_757.h  2021-03-16_11_53_31_498.h  2021-03-16_11_54_12_762.h  2021-03-16_11_54_14_570.h  2021-03-16_11_54_55_813.h  2021-03-16_11_55_35_182.h  2021-03-16_11_55_52_831.h
Gamebryo-Conv/.vshistory/interpret.hpp/: 2021-03-15_18_40_52_553.hpp  2021-03-16_11_56_54_484.hpp  2021-03-16_11_56_58_902.hpp  2021-03-16_11_57_31_101.hpp  2021-03-16_11_57_58_572.hpp  2021-03-16_11_58_22_735.hpp  2021-03-16_11_58_31_161.hpp  2021-03-16_11_58_34_305.hpp  2021-03-16_11_59_09_634.hpp  2021-03-16_12_00_16_969.hpp  2021-03-16_12_01_20_131.hpp  2021-03-16_12_01_45_031.hpp  2021-03-16_12_02_27_560.hpp  2021-03-16_12_02_36_788.hpp  2021-03-16_12_02_54_198.hpp  2021-03-16_12_02_56_413.hpp  2021-03-16_12_04_06_505.hpp  2021-03-16_12_04_19_616.hpp  2021-03-16_12_04_34_672.hpp  2021-03-16_12_05_07_969.hpp  2021-03-16_12_05_12_060.hpp  2021-03-16_12_05_23_831.hpp  2021-03-16_12_06_06_808.hpp  2021-03-16_12_06_29_541.hpp  2021-03-16_12_07_13_141.hpp  2021-03-16_12_07_21_630.hpp  2021-03-16_12_07_25_675.hpp  2021-03-16_12_07_44_413.hpp  2021-03-16_12_08_46_874.hpp
Gamebryo-Conv/.vshistory/main.cpp/: 2021-01-13_10_43_30_338.cpp  2021-03-16_11_26_40_803.cpp  2021-03-16_11_26_45_827.cpp  2021-03-16_11_27_03_045.cpp  2021-03-16_11_33_33_688.cpp  2021-03-16_11_33_43_325.cpp  2021-03-16_12_13_53_896.cpp  2021-03-16_12_14_30_537.cpp  2021-03-16_12_14_37_607.cpp  2021-03-16_12_14_51_169.cpp  2021-03-16_12_15_02_718.cpp  2021-03-16_12_15_21_406.cpp  2021-03-16_12_15_29_050.cpp  2021-03-16_12_15_41_056.cpp  2021-03-16_12_17_07_740.cpp  2021-03-16_12_18_36_134.cpp  2021-03-16_12_18_40_127.cpp  2021-03-16_12_18_44_956.cpp  2021-03-16_12_18_47_813.cpp  2021-03-16_12_19_00_524.cpp  2021-03-16_12_19_34_106.cpp  2021-03-16_12_20_46_271.cpp  2021-03-16_12_21_08_116.cpp  2021-03-16_12_21_44_164.cpp  2021-03-16_12_22_16_006.cpp  2021-03-16_12_22_34_802.cpp  2021-03-16_12_27_46_817.cpp  2021-03-16_12_27_52_288.cpp  2021-03-16_12_27_57_338.cpp  2021-03-16_12_34_52_854.cpp  2021-03-16_12_34_55_751.cpp  (+1 more)
Release/: Gamebryo-Conv.ipdb  conv.iobj  conv.ipdb  conv.rc
ckconv/: CMakeLists.txt  Global.h  conv.hpp  main.cpp  version.h
ckconv/resources/: ckconv.rc
